Fix gallery vertical alignment

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .fade-in {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #868484;
   opacity: 0;
   animation: fadeIn 2s ease-in-out forwards;
